# vimseo

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  README.md  README_tmp.md  changelog.html  contributing.html  credits.html  credits.md.jinja  gen_credits.py  index.html  licenses.html  mkdocs.yml  modify_readme_image_url.py  objects.inv  pyproject.toml  references.bib  sitemap.xml  tox.ini
.github/workflows/: python-package.yml
LICENSES/headers/: BSD-0-Clause.txt  CC-BY-SA-4.0.txt  LGPL-3.0.txt
_draft_design/: abaqus_wrapper_observed.puml  abaqus_wrapper_old.puml  calibration.rst  calibration_tool.puml  index.rst  integrated_model_objective.puml  integrated_model_observed.puml  metrics.puml  model.puml  model_integration_abaqus.puml  plugins.html  result_tracker.puml  seq_calibration.puml  storage.puml  tool.puml  workflow.puml
_draft_design/plugins/: index.html
changelog/: index.html
contributing/: index.html
credits/: index.html
docs/: changelog.md  contributing.md  credits.md  credits.md.jinja  gallery_conf.py  gen_credits.py  gen_ref_nav.py  index.md  licenses.md  references.bib
docs/_draft_design/: actors.rst  calibration.rst  index.rst  introduction.rst  model_architecture.rst  plugins.md
docs/explanations/: decision_making_support.md  model_validation.md
docs/how_to/: model_integration.md  run_a_study.md
docs/references/: acronyms.md  component_based_model.md  materials.md  state_of_the_art.md
docs/user_guide/: cli.md  developer_information.md  developer_install.md
explanations/: decision_making_support.html  model_validation.html
explanations/asme2025/: abstract.html
explanations/decision_making_support/: index.html
explanations/eccomas2024/: abstract.html
explanations/model_integration/: model_integration.html
explanations/model_validation/: index.html
explanations/paper_q1_2025/: paper.html
how_to/: abaqus_model_integration.html  run_a_study.html
how_to/02_integrated_models/: BendingTestAnalytical_ThreePoints_cache.hdf
how_to/abaqus_model_integration/: index.html
how_to/model_integration/: index.html
how_to/parameter_space/: index.html  parameter_space.html
how_to/run_a_study/: index.html
images/: ~$livrable_validation.pptx
licenses/: index.html
reference/: SUMMARY.html
reference/SUMMARY/: index.html
reference/vimseo/: api.html  index.html
references/: abaqus_wrapper.html  acronyms.html  component_based_model.html  materials.html  state_of_the_art.html
references/abaqus_wrapper/: index.html
references/acronyms/: index.html
references/component_based_model/: index.html
references/materials/: Ta6v_properties.csv  index.html  ta6v.html
references/solution_verification/: solution_verification_method.html
references/state_of_the_art/: index.html
requirements/: check.txt  doc.txt  test-constraints.in  test-python3.10.txt  test-python3.11.txt  test-python3.12.txt
roadmap/: index.html
search/: search_index.json
src/vimseo/: __init__.py  api.py
tests/: conftest.py
tests/config/: test_config.py
tests/core/: test_api.py  test_auto_get.py  test_discipline_based_model.py  (+5 more)
user_guide/: vimseo.env
(+3256 files in other folders)
