[project]
name = "vimseo"
authors = [
    {name = "VIMSEO developers", email = "sebastien.bocquet@irt-saintexupery.com"}
]
description = "A framework for the demonstration of simulation credibility, enabling Qualification/Certification by Analysis supported by tests."
readme = "README.md"
license = "LGPL-3.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
requires-python = ">=3.10, <3.14"
dependencies = [
    "plotly >= 5.15.0, <= 5.24.0",
    "nbformat>=4.2.0, <= 5.10.4",
    "future >= 1.0.0, <= 1.0.0",
    "gemseo-vimseo[all] >= 6, < 7",
    "PyYAML >= 6.0.2, <= 6.0.3",
    "streamlit >= 1.44.0, <= 1.50.0",
    "streamlit-pydantic-sebastienbocquet == 0.6.1.dev1",
    "pytest-csv >= 3.0.0, <= 3.0.0",
    "statsmodels >= 0.14.4, <= 0.14.5",
    "eval-type-backport >= 0.2.2, <= 0.2.2",
    "gemseo_calibration-vimseo >= 3.0.2, < 4",
    "seaborn >= 0.13.2, <= 0.13.2",
    "meshio >= 5.3.5, <= 5.3.5",
    "mlflow >= 3.5.1, <= 3.5.1",
    "emcee >= 3.1.6, <= 3.1.6",
    "openturns >=1.24, <= 1.24",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "covdefaults >=2",
    "pytest >=7,<9",
    "pytest-cov >=5",
    "pytest-xdist >=3",
]
doc = [
    "black",
    "griffe-fieldz",
    "griffe-inherited-docstrings",
    "markdown-exec[ansi]",
    "mike",
    "mkdocs-bibtex",
    "mkdocs-gallery",
    "mkdocs-gen-files",
    "mkdocs-include-markdown-plugin",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocstrings[python]",
    "mkdocs-table-reader-plugin",
    "mkdocs-exclude",
    "mkdocs-autorefs",
]

[project.urls]
Homepage = "https://gemseo.org"
Source = "https://github.com/vimseo/vimseo"
Issues = "https://github.com/vimseo/vimseo/issues"

[project.entry-points]
gemseo_plugins = { vimseo = "vimseo" }

[project.scripts]
dashboard_workflow = "vimseo.workflow.entry_point:main"
dashboard_database_viewer = "vimseo.storage_management.dashboard.db_viewer_entry_point:main"
workflow_executor = "vimseo.workflow.workflow_executor:main"
dashboard_mlflow = "vimseo.storage_management.mlflow_ui_entry_point:main"

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
# show extra info on xfailed, xpassed, and skipped tests
#addopts = "--disable-pytest-warnings -rxs"
testpaths = ["tests"]
markers = [
    "fast: mark a test as running fast (a few seconds).",
    "medium_slow: mark a test as taking a few minutes to run.",
    "slow: mark a test as taking more than 15 min and less than one hour.",
    "very_slow: mark a test as taking more than one hour to run.",
]
